--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,11 @@
  <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet">
  <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
 <link href="%PUBLIC_URL%/css/vendors.css" rel="stylesheet">
+<link href="%PUBLIC_URL%/css/font-awesome.min.css" rel="stylesheet">
 
  <!-- YOUR CUSTOM CSS -->
  <link href="%PUBLIC_URL%/css/custom.css" rel="stylesheet">
+ <link href="%PUBLIC_URL%/css/admin.css" rel="stylesheet">
     <title>Travel App</title>
     <meta name="description" content="Full Stack Travel App built with Spring Boot, Spring Security, JWT, MySQL, React and Ant Design.">
   </head>
